butterchicken page clean-up using css is done ...

--- a/design.css
+++ b/design.css
@@ -22,3 +22,9 @@ button ,a{
     color: red;
     text-decoration: none;
 }
+.bir{
+    background-color: blanchedalmond;
+}
+.but{
+    background-color: blanchedalmond;
+}
