designing of the 3 recipe pages is completed ...

--- a/design.css
+++ b/design.css
@@ -22,9 +22,5 @@ button ,a{
     color: red;
     text-decoration: none;
 }
-.bir{
+.back{
     background-color: blanchedalmond;
-}
-.but{
-    background-color: blanchedalmond;
-}
